--- a/cmok0004/Assignment_PartB_Streaming_Application.ipynb
+++ b/cmok0004/Assignment_PartB_Streaming_Application.ipynb
@@ -308,25 +308,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "('10011101000', '110010001011')"
-     },
-     "execution_count": 210,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 219,
+   "outputs": [],
    "source": [
     "from typing import Tuple\n",
     "\n",
     "\"\"\"\n",
     "    Convert lat-lng from tuple of floating points to tuple of binary string presentations of the values\n",
     "    !!!IMPORTANT!!!\n",
-    "    To avoid converting floating points to binary directly, all values are x100 and converted to integer\n",
-    "    THE FINAL VALUE IS 100X THE ORIGINAL VALUE (but it doesnt matter for our use case)\n",
+    "        To avoid converting floating points to binary directly, all values are x100 and converted to integer\n",
+    "        THE FINAL VALUE IS 100X THE ORIGINAL VALUE (but it doesnt matter for our use case)\n",
+    "    !!!END OF IMPORTANT!!!\n",
     "\"\"\"\n",
     "def latlng_to_binstr(lat_lng: Tuple[float, float]) -> Tuple[str, str]:\n",
     "    # float(25.125), float(10.13) -> int(25125), int(10130) -> '0b10101100`', '0b11011010' -> '10101100', '11011010'\n",
@@ -337,22 +329,30 @@
     "                                                          within 3 precision\n",
     "\"\"\"\n",
     "def are_close(lat_lng_1: Tuple[float, float], lat_lng_2: Tuple[float, float]) -> bool:\n",
-    "    pass\n",
+    "    lat_lng_1 = latlng_to_binstr(lat_lng_1)\n",
+    "    lat_lng_2 = latlng_to_binstr(lat_lng_2)\n",
+    "    for i in range(3):\n",
+    "        if lat_lng_1[0][i] != lat_lng_2[0][i] or lat_lng_1[1][i] != lat_lng_2[1][i]:\n",
+    "            return False\n",
+    "    return True\n",
     "\n",
     "\"\"\"\n",
     "    Return True if two given latitude-longitude pairs are the same\n",
     "                                                          within 5 precision\n",
     "\"\"\"\n",
     "def are_same(lat_lng_1: Tuple[float, float], lat_lng_2: Tuple[float, float]) -> bool:\n",
-    "    pass\n",
-    "\n",
-    "latlng_to_binstr((12.561, 32.12))"
+    "    lat_lng_1 = latlng_to_binstr(lat_lng_1)\n",
+    "    lat_lng_2 = latlng_to_binstr(lat_lng_2)\n",
+    "    for i in range(5):\n",
+    "        if lat_lng_1[0][i] != lat_lng_2[0][i] or lat_lng_1[1][i] != lat_lng_2[1][i]:\n",
+    "            return False\n",
+    "    return True\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-04T11:33:57.909510Z",
-     "start_time": "2023-06-04T11:33:57.880579Z"
+     "end_time": "2023-06-04T12:05:56.924266Z",
+     "start_time": "2023-06-04T12:05:56.905266Z"
     }
    }
   },
