--- a/cmok0004/Assignment_PartB_Producer2.ipynb
+++ b/cmok0004/Assignment_PartB_Producer2.ipynb
@@ -39,45 +39,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "'2022-12-28'"
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from pymongo import MongoClient\n",
-    "import pandas as pd\n",
-    "from datetime import timedelta\n",
-    "\n",
-    "db = MongoClient('mongodb://localhost:27017/').fit3182_assignment_db\n",
-    "today = db.dates.find({}).sort(\"_id\", -1).limit(1)[0].get(\"_id\") + timedelta(days=1)\n",
-    "str(today.date())"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-06-04T10:54:51.963035Z",
-     "start_time": "2023-06-04T10:54:51.879014Z"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Message published successfully. Data: {'producer': 140550837312240, 'date': '2022-12-28'}\n",
-      "Message published successfully. Data: {'producer': 140550837312240, 'date': '2022-12-29'}\n",
-      "Message published successfully. Data: {'producer': 140550837312240, 'date': '2022-12-30'}\n"
+      "Message published successfully. Data: {'producer': 140550534564592, 'datetime': '2023-06-04 22:29:23.273526'}\n",
+      "Message published successfully. Data: {'producer': 140550534564592, 'datetime': '2023-06-05 03:17:23.273526'}\n",
+      "Message published successfully. Data: {'producer': 140550534564592, 'datetime': '2023-06-05 08:05:23.273526'}\n",
+      "Message published successfully. Data: {'producer': 140550534564592, 'datetime': '2023-06-05 12:53:23.273526'}\n",
+      "Message published successfully. Data: {'producer': 140550534564592, 'datetime': '2023-06-05 17:41:23.273526'}\n",
+      "Message published successfully. Data: {'producer': 140550534564592, 'datetime': '2023-06-05 22:29:23.273526'}\n",
+      "Message published successfully. Data: {'producer': 140550534564592, 'datetime': '2023-06-06 03:17:23.273526'}\n",
+      "Message published successfully. Data: {'producer': 140550534564592, 'datetime': '2023-06-06 08:05:23.273526'}\n",
+      "Message published successfully. Data: {'producer': 140550534564592, 'datetime': '2023-06-06 12:53:23.273526'}\n",
+      "Message published successfully. Data: {'producer': 140550534564592, 'datetime': '2023-06-06 17:41:23.273526'}\n",
+      "Message published successfully. Data: {'producer': 140550534564592, 'datetime': '2023-06-06 22:29:23.273526'}\n"
      ]
     },
     {
@@ -87,20 +65,23 @@
      "traceback": [
       "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
-      "Input \u001B[0;32mIn [9]\u001B[0m, in \u001B[0;36m<cell line: 11>\u001B[0;34m()\u001B[0m\n\u001B[1;32m     14\u001B[0m publish_message(\n\u001B[1;32m     15\u001B[0m     producer, TOPIC_NAME,\n\u001B[1;32m     16\u001B[0m     key\u001B[38;5;241m=\u001B[39m\u001B[38;5;28mstr\u001B[39m({\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mproducer\u001B[39m\u001B[38;5;124m\"\u001B[39m: \u001B[38;5;28mid\u001B[39m(producer), \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mdate\u001B[39m\u001B[38;5;124m\"\u001B[39m: \u001B[38;5;28mstr\u001B[39m(today\u001B[38;5;241m.\u001B[39mdate())}),\n\u001B[1;32m     17\u001B[0m     value\u001B[38;5;241m=\u001B[39m\u001B[38;5;28mstr\u001B[39m(data)\n\u001B[1;32m     18\u001B[0m )\n\u001B[1;32m     19\u001B[0m today \u001B[38;5;241m=\u001B[39m today \u001B[38;5;241m+\u001B[39m timedelta(days\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m1\u001B[39m)\n\u001B[0;32m---> 20\u001B[0m \u001B[43msleep\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m2\u001B[39;49m\u001B[43m)\u001B[49m\n",
+      "Input \u001B[0;32mIn [11]\u001B[0m, in \u001B[0;36m<cell line: 14>\u001B[0;34m()\u001B[0m\n\u001B[1;32m     17\u001B[0m publish_message(\n\u001B[1;32m     18\u001B[0m     producer, TOPIC_NAME,\n\u001B[1;32m     19\u001B[0m     key\u001B[38;5;241m=\u001B[39m\u001B[38;5;28mstr\u001B[39m({\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mproducer\u001B[39m\u001B[38;5;124m\"\u001B[39m: \u001B[38;5;28mid\u001B[39m(producer), \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mdatetime\u001B[39m\u001B[38;5;124m\"\u001B[39m: \u001B[38;5;28mstr\u001B[39m(now)}),\n\u001B[1;32m     20\u001B[0m     value\u001B[38;5;241m=\u001B[39m\u001B[38;5;28mstr\u001B[39m(data)\n\u001B[1;32m     21\u001B[0m )\n\u001B[1;32m     22\u001B[0m now \u001B[38;5;241m+\u001B[39m\u001B[38;5;241m=\u001B[39m timedelta(hours\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m4.8\u001B[39m)\n\u001B[0;32m---> 23\u001B[0m \u001B[43msleep\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m2\u001B[39;49m\u001B[43m)\u001B[49m\n",
       "\u001B[0;31mKeyboardInterrupt\u001B[0m: "
      ]
     }
    ],
    "source": [
-    "from time import sleep\n",
+    "import pandas as pd\n",
     "import random\n",
+    "from time import sleep\n",
+    "from datetime import datetime, timedelta\n",
     "\n",
     "HOST_IP = \"192.168.20.6\"\n",
     "TOPIC_NAME = \"aqua_producer\"\n",
     "\n",
     "climate_streaming = pd.read_csv(\"../dataset/hotspot_AQUA_streaming.csv\")\n",
     "producer = connect_kafka_producer()\n",
+    "now = datetime.now()\n",
     "\n",
     "while True:\n",
     "    rand_index = random.randrange(0, len(climate_streaming))\n",
@@ -108,17 +89,17 @@
     "    data = dict(row)\n",
     "    publish_message(\n",
     "        producer, TOPIC_NAME,\n",
-    "        key=str({\"producer\": id(producer), \"date\": str(today.date())}),\n",
+    "        key=str({\"producer\": id(producer), \"datetime\": str(now)}),\n",
     "        value=str(data)\n",
     "    )\n",
-    "    today = today + timedelta(days=1)\n",
+    "    now += timedelta(hours=4.8)\n",
     "    sleep(2)\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-04T10:54:57.534952Z",
-     "start_time": "2023-06-04T10:54:51.981441Z"
+     "end_time": "2023-06-04T12:29:44.927165Z",
+     "start_time": "2023-06-04T12:29:23.244016Z"
     }
    }
   },
