--- a/cmok0004/Assignment_PartB_Producer1.ipynb
+++ b/cmok0004/Assignment_PartB_Producer1.ipynb
@@ -826,7 +826,7 @@
     "import random\n",
     "\n",
     "HOST_IP = \"192.168.20.6\"\n",
-    "TOPIC_NAME = \"producer_1\"\n",
+    "TOPIC_NAME = \"climate_producer\"\n",
     "\n",
     "climate_streaming = pd.read_csv(\"../dataset/climate_streaming.csv\")\n",
     "producer = connect_kafka_producer()\n",
