--- a/cmok0004/Assignment_PartB_Streaming_Application.ipynb
+++ b/cmok0004/Assignment_PartB_Streaming_Application.ipynb
@@ -27,6 +27,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 220,
+   "outputs": [],
+   "source": [
+    "from typing import Tuple\n",
+    "\n",
+    "\"\"\"\n",
+    "    Convert lat-lng from tuple of floating points to tuple of binary string presentations of the values\n",
+    "    !!!IMPORTANT!!!\n",
+    "        To avoid converting floating points to binary directly, all values are x100 and converted to integer\n",
+    "        THE FINAL VALUE IS 100X THE ORIGINAL VALUE (but it doesnt matter for our use case)\n",
+    "    !!!END OF IMPORTANT!!!\n",
+    "\"\"\"\n",
+    "def latlng_to_binstr(lat_lng: Tuple[float, float]) -> Tuple[str, str]:\n",
+    "    # float(25.125), float(10.13) -> int(25125), int(10130) -> '0b10101100`', '0b11011010' -> '10101100', '11011010'\n",
+    "    return bin(int(lat_lng[0]*100))[2:], bin(int(lat_lng[1]*100))[2:]\n",
+    "\n",
+    "\"\"\"\n",
+    "    Return True if two given latitude-longitude pairs are close together\n",
+    "                                                          within 3 precision\n",
+    "\"\"\"\n",
+    "def are_close(lat_lng_1: Tuple[float, float], lat_lng_2: Tuple[float, float]) -> bool:\n",
+    "    lat_lng_1 = latlng_to_binstr(lat_lng_1)\n",
+    "    lat_lng_2 = latlng_to_binstr(lat_lng_2)\n",
+    "    for i in range(3):\n",
+    "        if lat_lng_1[0][i] != lat_lng_2[0][i] or lat_lng_1[1][i] != lat_lng_2[1][i]:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "\"\"\"\n",
+    "    Return True if two given latitude-longitude pairs are the same\n",
+    "                                                          within 5 precision\n",
+    "\"\"\"\n",
+    "def are_same(lat_lng_1: Tuple[float, float], lat_lng_2: Tuple[float, float]) -> bool:\n",
+    "    lat_lng_1 = latlng_to_binstr(lat_lng_1)\n",
+    "    lat_lng_2 = latlng_to_binstr(lat_lng_2)\n",
+    "    for i in range(5):\n",
+    "        if lat_lng_1[0][i] != lat_lng_2[0][i] or lat_lng_1[1][i] != lat_lng_2[1][i]:\n",
+    "            return False\n",
+    "    return True\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-04T12:22:38.850709Z",
+     "start_time": "2023-06-04T12:22:38.847421Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 159,
    "outputs": [],
    "source": [
@@ -82,7 +132,7 @@
     }
    ],
    "source": [
-    "p1_topic_name = \"producer_1\"\n",
+    "p1_topic_name = \"climate_producer\"\n",
     "p1_stream_df = (\n",
     "    spark.readStream.format('kafka')\n",
     "    .option('kafka.bootstrap.servers', f'{HOST_IP}:9092')\n",
@@ -200,8 +250,7 @@
     "                \"ghi\": int(self.data.get(\"GHI_w/m2\"))\n",
     "            },\n",
     "            \"hotspots\": []  # init empty hotspots\n",
-    "        }\n",
-    "\n"
+    "        }\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -310,44 +359,7 @@
    "cell_type": "code",
    "execution_count": 219,
    "outputs": [],
-   "source": [
-    "from typing import Tuple\n",
-    "\n",
-    "\"\"\"\n",
-    "    Convert lat-lng from tuple of floating points to tuple of binary string presentations of the values\n",
-    "    !!!IMPORTANT!!!\n",
-    "        To avoid converting floating points to binary directly, all values are x100 and converted to integer\n",
-    "        THE FINAL VALUE IS 100X THE ORIGINAL VALUE (but it doesnt matter for our use case)\n",
-    "    !!!END OF IMPORTANT!!!\n",
-    "\"\"\"\n",
-    "def latlng_to_binstr(lat_lng: Tuple[float, float]) -> Tuple[str, str]:\n",
-    "    # float(25.125), float(10.13) -> int(25125), int(10130) -> '0b10101100`', '0b11011010' -> '10101100', '11011010'\n",
-    "    return bin(int(lat_lng[0]*100))[2:], bin(int(lat_lng[1]*100))[2:]\n",
-    "\n",
-    "\"\"\"\n",
-    "    Return True if two given latitude-longitude pairs are close together\n",
-    "                                                          within 3 precision\n",
-    "\"\"\"\n",
-    "def are_close(lat_lng_1: Tuple[float, float], lat_lng_2: Tuple[float, float]) -> bool:\n",
-    "    lat_lng_1 = latlng_to_binstr(lat_lng_1)\n",
-    "    lat_lng_2 = latlng_to_binstr(lat_lng_2)\n",
-    "    for i in range(3):\n",
-    "        if lat_lng_1[0][i] != lat_lng_2[0][i] or lat_lng_1[1][i] != lat_lng_2[1][i]:\n",
-    "            return False\n",
-    "    return True\n",
-    "\n",
-    "\"\"\"\n",
-    "    Return True if two given latitude-longitude pairs are the same\n",
-    "                                                          within 5 precision\n",
-    "\"\"\"\n",
-    "def are_same(lat_lng_1: Tuple[float, float], lat_lng_2: Tuple[float, float]) -> bool:\n",
-    "    lat_lng_1 = latlng_to_binstr(lat_lng_1)\n",
-    "    lat_lng_2 = latlng_to_binstr(lat_lng_2)\n",
-    "    for i in range(5):\n",
-    "        if lat_lng_1[0][i] != lat_lng_2[0][i] or lat_lng_1[1][i] != lat_lng_2[1][i]:\n",
-    "            return False\n",
-    "    return True\n"
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
