--- a/cmok0004/Assignment_PartB_Producer1.ipynb
+++ b/cmok0004/Assignment_PartB_Producer1.ipynb
@@ -1710,7 +1710,66 @@
       "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-07-17'}\n",
       "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-07-18'}\n",
       "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-07-19'}\n",
-      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-07-20'}\n"
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-07-20'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-07-21'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-07-22'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-07-23'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-07-24'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-07-25'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-07-26'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-07-27'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-07-28'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-07-29'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-07-30'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-07-31'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-08-01'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-08-02'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-08-03'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-08-04'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-08-05'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-08-06'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-08-07'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-08-08'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-08-09'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-08-10'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-08-11'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-08-12'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-08-13'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-08-14'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-08-15'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-08-16'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-08-17'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-08-18'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-08-19'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-08-20'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-08-21'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-08-22'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-08-23'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-08-24'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-08-25'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-08-26'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-08-27'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-08-28'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-08-29'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-08-30'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-08-31'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-09-01'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-09-02'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-09-03'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-09-04'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-09-05'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-09-06'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-09-07'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-09-08'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-09-09'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-09-10'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-09-11'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-09-12'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-09-13'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-09-14'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-09-15'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-09-16'}\n",
+      "CLIMATE -> Kafka with Data: {'producer': 'climate', 'date': '2028-09-17'}\n"
      ]
     }
    ],
