I don't know anymore

--- a/cmok0004/Assignment_PartB_Producer3.ipynb
+++ b/cmok0004/Assignment_PartB_Producer3.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
@@ -4335,8 +4335,8 @@
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true,
     "ExecuteTime": {
+     "end_time": "2023-06-05T19:58:47.783791Z",
      "start_time": "2023-06-05T08:19:26.407405Z"
     }
    }
@@ -4347,8 +4347,7 @@
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false,
-    "is_executing": true
+    "collapsed": false
    }
   }
  ],
